--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.3",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.29.2",
     "global": "^4.4.0",
     "lucide-react": "^0.563.0",
